--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -90,29 +90,116 @@
         <div class="panel-heading m-3">
           <h3 class="page-header">バッジ</h3>
           <div class="amica-badge register-badge">
-            <span class="at-badge"><i class="fas fa-smile-wink"></i></span>
-            <div class="register-badge-description"><%= @user.created_at.strftime('%Y/%m/%d') %> Amicaに登録した記念バッジ</div>
+            <span class="at-badge" style="color: rgba(29,144,190,0.8)"><i class="fas fa-smile-wink"></i></span>
+            <div class="badge-description"><%= @user.created_at.strftime('%Y/%m/%d') %> Amicaに登録した記念バッジ</div>
           </div>
-          <% if @achievement.postsCount > 100%>
+          <% if @achievement.postsCount >= 100%>
             <div class="amica-badge posts100-badge">
-              <span class="at-badge"><i class="fas fa-smile-wink"></i></span>
-              <div class="register-badge-description">投稿数100個を超えた記念バッジ</div>
+              <span class="at-badge" style="color: green"><i class="fas fa-bullhorn"></i></span>
+              <div class="register-badge-description">投稿数100個達成記念バッジ</div>
+            </div>
+          <% elsif @achievement.postsCount >= 1000%>
+            <div class="amica-badge posts1000-badge">
+              <span class="at-badge" style="color:orange"><i class="fas fa-bullhorn"></i></span>
+              <div class="badge-description">投稿数が1000個達成記念バッジ</div>
+            </div>
+          <% elsif @achievement.postsCount >= 10000%>
+            <div class="amica-badge posts10000-badge">
+              <span class="at-badge" style="color: red"><i class="fas fa-bullhorn"></i></span>
+              <div class="badge-description">投稿数が10000個達成記念バッジ</div>
             </div>
           <% end %>
-          <div class="amica-badge posts100-badge">
-            <span class="at-badge"><i class="fas fa-smile-wink"></i></span>
-            <div class="register-badge-description">投稿数100個を超えた記念バッジ</div>
-          </div>
+          <% if @achievement.friendsCount >= 10%>
+            <div class="amica-badge friends10-badge">
+              <span class="at-badge" style="color: green"><i class="fas fa-icons"></i></span>
+              <div class="badge-description">友達人数10人達成記念バッジ</div>
+            </div>
+          <% elsif @achievement.friendsCount >= 50%>
+            <div class="amica-badge friends50-badge">
+              <span class="at-badge" style="color: orange"><i class="fas fa-icons"></i></span>
+              <div class="badge-description">友達人数50人達成経過記念バッジ</div>
+            </div>
+          <% elsif @achievement.friendsCount >= 100%>
+            <div class="amica-badge friends100-badge">
+              <span class="at-badge" style="color: red"><i class="fas fa-icons"></i></span>
+              <div class="badge-description">友達人数100人達成経過記念バッジ</div>
+            </div>
+          <% end %>
+          <% if @achievement.communitiesCount >= 1%>
+            <div class="amica-badge communities1-badge">
+              <span class="at-badge" style="color: green"><i class="fas fa-map-marked-alt"></i></span>
+              <div class="badge-description">コミュニティ作成記念バッジ</div>
+            </div>
+            <% elsif @achievement.communitiesCount >= 5%>
+            <div class="amica-badge communities5-badge">
+              <span class="at-badge" style="color: orange"><i class="fas fa-map-marked-alt"></i></span>
+              <div class="badge-description">コミュニティを5個作成達成記念バッジ</div>
+            </div>
+            <% elsif @achievement.communitiesCount >= 15%>
+            <div class="amica-badge communities15-badge">
+              <span class="at-badge" style="color: red"><i class="fas fa-map-marked-alt"></i></span>
+              <div class="badge-description">コミュニティを15個作成達成記念バッジ</div>
+            </div>
+          <% end %>
+          <% if @achievement.registrationDays >= 100%>
+            <div class="amica-badge registrationDays10-badge">
+              <span class="at-badge" style="color: green"><i class="fas fa-sign-in-alt"></i></span>
+              <div class="badge-description">amica登録から100日経過記念バッジ</div>
+            </div>
+          <% elsif @achievement.registrationDays >= 365%>
+            <div class="amica-badge communities5-badge">
+              <span class="at-badge" style="color: orange"><i class="fas fa-sign-in-alt"></i></span>
+              <div class="badge-description">amica登録から365日経過記念バッジ</div>
+            </div>
+          <% elsif @achievement.communitiesCount >= 1000%>
+            <div class="amica-badge communities15-badge">
+              <span class="at-badge" style="color: red"><i class="fas fa-sign-in-alt"></i></span>
+              <div class="badge-description">amica登録から1000日経過記念バッジ</div>
+            </div>
+          <% end %>
+          <!---
+          <%# if @achievement.commentsCount >= 10%>
+            <div class="amica-badge comments10-badge">
+              <span class="at-badge" style="color: green"><i class="fas fa-handshake"></i></span>
+              <div class="badge-description">コメント数10個達成記念バッジ</div>
+            </div>
+          <% #elsif @achievement.commentsCount >= 50%>
+            <div class="amica-badge comments50-badge">
+              <span class="at-badge" style="color: orange"><i class="fas fa-handshake"></i></span>
+              <div class="badge-description">コメント数50個達成記念バッジ/div>
+            </div>
+          <% #elsif @achievement.commentsCount >= 100%>
+            <div class="amica-badge comments100-badge">
+              <span class="at-badge" style="color: red"><i class="fas fa-handshake"></i></span>
+              <div class="badge-description">コメント数100個達成記念バッジ</div>
+            </div>
+          <% #end %>
+--->
+          <% if @achievement.niceLv1== true%>
+            <div class="amica-badge niceLv1-badge">
+              <span class="at-badge" style="color: green"><i class="fas fa-thumbs-up"></i></span>
+              <div class="badge-description">amica運営からの特別なバッジLv1</div>
+            </div>
+          <% elsif @achievement.niceLv2 == true%>
+            <div class="amica-badge niceLv2-badge">
+              <span class="at-badge" style="color: orange"><i class="fas fa-thumbs-up"></i></span>
+              <div class="badge-description">amica運営からの特別なバッジLv2</div>
+            </div>
+          <% elsif @achievement.niceLv3 == true%>
+            <div class="amica-badge niceLv3-badge">
+              <span class="at-badge" style="color: red"><i class="fas fa-thumbs-up"></i></span>
+              <div class="badge-description">amica運営からの特別なバッジLv3</div>
+            </div>
+          <% end %>
           <% if @user.admin %>
             <div class="amica-badge admin-badge">
-              <span class="at-badge"><i class="fas fa-crown"></i></span>
-              <div class="admin-badge-description">Amica運営バッジ</div>
+              <span class="at-badge" style="color: rgba(29,144,190,0.8)"><i class="fas fa-crown"></i></span>
+              <div class="badge-description">Amica運営バッジ</div>
             </div>
           <% end %>
         </div>
       </div>
     </div>
-
     <div class="col-md-3 col-sm-12 w-100">
       <div class="panel panel-default">
         <div class="panel-heading m-3">
