--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -101,12 +101,12 @@
           <% elsif @achievement.postsCount >= 1000%>
             <div class="amica-badge posts1000-badge">
               <span class="at-badge" style="color:orange"><i class="fas fa-bullhorn"></i></span>
-              <div class="badge-description">投稿数が1000個達成記念バッジ</div>
+              <div class="badge-description">投稿数1000個達成記念バッジ</div>
             </div>
           <% elsif @achievement.postsCount >= 10000%>
             <div class="amica-badge posts10000-badge">
               <span class="at-badge" style="color: red"><i class="fas fa-bullhorn"></i></span>
-              <div class="badge-description">投稿数が10000個達成記念バッジ</div>
+              <div class="badge-description">投稿数10000個達成記念バッジ</div>
             </div>
           <% end %>
           <% if @achievement.friendsCount >= 10%>
