--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -133,12 +133,12 @@
             <% elsif @achievement.communitiesCount >= 5%>
             <div class="amica-badge communities5-badge">
               <span class="at-badge" style="color: orange"><i class="fas fa-map-marked-alt"></i></span>
-              <div class="badge-description">コミュニティを5個作成達成記念バッジ</div>
+              <div class="badge-description">コミュニティ5個作成達成記念バッジ</div>
             </div>
             <% elsif @achievement.communitiesCount >= 15%>
             <div class="amica-badge communities15-badge">
               <span class="at-badge" style="color: red"><i class="fas fa-map-marked-alt"></i></span>
-              <div class="badge-description">コミュニティを15個作成達成記念バッジ</div>
+              <div class="badge-description">コミュニティ15個作成達成記念バッジ</div>
             </div>
           <% end %>
           <% if @achievement.registrationDays >= 100%>
