--- a/app/views/communities/show.html.erb
+++ b/app/views/communities/show.html.erb
@@ -22,7 +22,7 @@
     </div>
   </div>
 
-  <div class="d-md-flex flex-md-equal w-100 my-md-3 ps-md-3">
+  <div class="d-md-flex flex-md-equal w-100 my-md-3 ps-md-3" sty="">
     <div class="bg-dark me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white">
       <div class="my-3 py-3">
         <h2 class="display-5">参加者</h2>
