--- a/app/views/communities/edit.html.erb
+++ b/app/views/communities/edit.html.erb
@@ -52,7 +52,7 @@
 
           <div class="col-sm-12">
             <div class="search-area-colum form-contents">
-              <%= f.label "タグ (1つ2~20文字)" , class:"form-label"%>
+              <%= f.label "タグ (1つ2~20文字 半角英数字,ひらがな,カタカナ,漢字)" , class:"form-label"%>
               <%= f.text_field :tag_list, id:"myTags",value: @tag%>
             </div>
           </div>
