--- a/app/views/communities/show.html.erb
+++ b/app/views/communities/show.html.erb
@@ -18,11 +18,10 @@
           <%= link_to "参加", community_manage_index_path(@community.id), method: :post, class: "btn btn-outline-dark" %>
         <% end %>
       <% end %>
-
     </div>
   </div>
 
-  <div class="d-md-flex flex-md-equal w-100 my-md-3 ps-md-3" sty="">
+  <div class="d-md-flex flex-md-equal w-100 my-md-3 ps-md-3" style="height: 600px">
     <div class="bg-dark me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white">
       <div class="my-3 py-3">
         <h2 class="display-5">参加者</h2>
@@ -30,14 +29,13 @@
         <br />
         <% @community.community_members.shuffle.first(5).each do |m| %>
           <% unless @leader == m.user%>
-            <%= link_to "#{m.user.name}" ,profile_path(m.user.userid),class: "lead text-white",style: "text-decoration:none;"%>
-            <br />
+            <p class="mb-0"><%= link_to "#{m.user.name}" ,profile_path(m.user.userid),class: "lead text-white",style: "text-decoration:none;"%></p>
           <% end %>
         <% end %>
       </div>
     </div>
 
-    <div class="bg-light me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center">
+    <div class="bg-light me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center" style="height: 600px">
       <div class="my-3 py-3">
         <h2 class="display-5">タグ</h2>
         <% @community.tags.each do |t| %>
