--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -114,14 +114,14 @@
 
               <div class="col-sm-12">
                 <div class="search-area-colum form-contents">
-                  <%= f.label "資格 (1つ2~20文字)" , class:"form-label"%>
+                  <%= f.label "資格 (1つ2~20文字 半角英数字,ひらがな,カタカナ,漢字)" , class:"form-label"%>
                   <%= f.text_field :accreditation_list, id:"accreditation",value: @accreditation_tag %>
                 </div>
               </div>
 
               <div class="col-sm-12">
                 <div class="search-area-colum form-contents">
-                  <%= f.label "タグ (1つ2~20文字)" , class:"form-label"%>
+                  <%= f.label "タグ (1つ2~20文字 半角英数字,ひらがな,カタカナ,漢字)" , class:"form-label"%>
                   <%= f.text_field :tag_list, id:"tag",value: @tag %>
                 </div>
               </div>
