--- a/app/views/pages/_user.html.erb
+++ b/app/views/pages/_user.html.erb
@@ -1,5 +1,4 @@
-<% mates.each do |user| %>
-  <div class="collapse show mb-1">
+<div class="collapse show mb-1" id="collapseExample4">
     <div class="p-1 bg-white rounded shadow-sm" style="padding-left: 10px;padding-right: 10px">
         <%= link_to profile_path(user.userid) do %>
         <div class="d-flex justify-content-between">
@@ -29,5 +28,4 @@
       <% end %>
     </div>
   </div>
-<% end %>
 
