--- a/app/views/communities/show.html.erb
+++ b/app/views/communities/show.html.erb
@@ -9,11 +9,11 @@
       <% end %>
       <h1 class="display-4 fw-normal"><%=@community.name %></h1>
       <% if @leader == current_user %>
-        <%=  link_to "チャット", edit_community_path,class: "btn btn-outline-dark mx-2" %>
+        <%=  link_to "チャット", chats_path,class: "btn btn-outline-dark mx-2" %>
         <%=  link_to "編集", edit_community_path,class: "btn btn-outline-dark mx-2" %>
       <% else %>
         <% if @join %>
-          <%=  link_to "チャット", edit_community_path,class: "btn btn-outline-dark mx-2" %>
+          <%=  link_to "チャット", chats_path,class: "btn btn-outline-dark mx-2" %>
           <%=  link_to "脱退" , community_manage_path(@community.id,current_user.id), method: :delete,class: "btn btn-outline-dark mx-2", data: {confirm: "本当に脱退しますか？"}  %>
         <%  else  %>
           <%= link_to "参加", community_manage_index_path(@community.id), method: :post, class: "btn btn-outline-dark" %>
