--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,9 +1,10 @@
-<%= form_with model: comment, url: timeline_comments_path(post.id),local: false do |f| %>
-  <div class="form-group">
-    <%= f.label "コメントを投稿する" %>
-    <%= f.text_area :comment, :size => "3x3", autocomplete: 'off', placeholder: "コメントを入力してください", class: 'form-control' %>
-  </div>
-  <div class="text-right">
-    <%= f.submit "コメントする", class: 'btn btn-warning text-white'%>
-  </div>
-<% end %>
+<div class="align-items-center p-3 my-3 text-dark bg-light rounded shadow-sm">
+  <%= form_with model: comment, url: timeline_comments_path(post.id),local: false do |f| %>
+    <div class="FlexTextarea form-group mb-2">
+      <%= f.text_area :comment, :size => "3x3", autocomplete: 'off', placeholder: "コメントを入力してください", class: 'form-control' %>
+    </div>
+    <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+      <%= f.submit "コメントする", class: 'btn btn-warning text-white'%>
+    </div>
+  <% end %>
+</div>
