--- a/app/views/timelines/index.html.erb
+++ b/app/views/timelines/index.html.erb
@@ -1,7 +1,7 @@
 <%= stylesheet_link_tag 'timelines', media: 'all', 'data-turbolinks-track': 'reload' %>
 <%= javascript_pack_tag 'timeline/main', 'data-turbolinks-track': 'reload' %>
 
-<body class="bg-light">
+<body class="bg-white">
   <div class="nav-scroller bg-white shadow-sm">
     <nav class="nav nav-underline" aria-label="Secondary navigation">
       <a class="nav-link active" aria-current="page" href="#">友達
@@ -20,7 +20,7 @@
   <p class="alert"><%= alert %></p>
 
   <main class="container">
-    <div class="align-items-center p-3 my-3 text-dark bg-light rounded shadow-sm">
+    <div class="align-items-center p-3 my-3 text-dark bg-white rounded shadow-sm">
       <%= form_for(@create ,url:timelines_path) do |f|%>
         <div class="FlexTextarea form-group mb-2">
           <div class="FlexTextarea__dummy" aria-hidden="true"></div>
