--- a/app/views/pages/community.js.erb
+++ b/app/views/pages/community.js.erb
@@ -1,1 +1,1 @@
-$("#favorite_community").empty().append("<%= j(render partial:'pages/community' , collection: @community, as: :community) %>");
+$("#favorite_community").empty().append("<%= j(render partial:'pages/community' , collection: @result, as: :community) %>");
