--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,10 +1,13 @@
-<div class="align-items-center p-3 my-3 text-dark bg-light rounded shadow-sm">
   <%= form_with model: comment, url: timeline_comments_path(post.id),local: false do |f| %>
     <div class="FlexTextarea form-group mb-2">
+      <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+        <%= button_tag  class: 'btn btn-primary position-absolute bottom-0 end-0 text-white' do%>
+          <i class="far fa-paper-plane"></i>
+        <% end %>
+      </div>
       <%= f.text_area :comment, :size => "3x3", autocomplete: 'off', placeholder: "コメントを入力してください", class: 'form-control' %>
     </div>
-    <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-      <%= f.submit "コメントする", class: 'btn btn-warning text-white'%>
-    </div>
+
+
+
   <% end %>
-</div>
