--- a/app/views/timelines/show.html.erb
+++ b/app/views/timelines/show.html.erb
@@ -1,5 +1,6 @@
 <%= stylesheet_link_tag 'timelines', media: 'all', 'data-turbolinks-track': 'reload' %>
 <%= javascript_pack_tag 'timeline/main', 'data-turbolinks-track': 'reload' %>
+<body class="bg-light">
 <div class="nav-scroller bg-white shadow-sm">
   <nav class="nav nav-underline" aria-label="Secondary navigation">
     <a class="nav-link active" aria-current="page" href="#">友達
@@ -15,7 +16,7 @@
 </div>
 
 <main class="container">
-  <div class="my-3 p-3 bg-white rounded shadow-sm">
+  <div class="mt-3 p-3 bg-white rounded shadow-sm">
     <div class="d-flex text-muted">
       <%= link_to profile_path(@user.find(@post.userid).userid), style:"color:black" do %>
         <% if @user.find(@post.userid).image.nil? %>
@@ -35,8 +36,11 @@
         <br />
       </p>
     </div>
+    <div class="mt-3 p-3 bg-white ">
+      <%= render 'comments/form', post: @post, comment: @comment%>
+    </div>
   </div>
-  <%= render 'comments/form', post: @post, comment: @comment%>
+
 
   <div id="comments_area">
     <%= render 'comments/index', comments: @comments, post:@post,user:@user %>
@@ -50,5 +54,6 @@
     <div class="col-sm"></div>
   </div>
 </main>
+</body>
 
 
