--- a/app/views/pages/_community.html.erb
+++ b/app/views/pages/_community.html.erb
@@ -1,28 +1,28 @@
- <div class="p-1 bg-white rounded shadow-sm" style="padding-left: 10px;padding-right: 10px">
-      <%= link_to page_path(community.user_id) do %>
-        <div class="d-flex justify-content-between">
-          <div class="d-flex text-muted pt-3">
-            <% if community_path(community.icon).nil? %>
-              <%= image_tag "/community_icon/default_icon.png", class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded",width: "40px",height: "40px" %>
-            <% else %>
-              <%= image_tag "/community_icon/#{community.icon}.png" , class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded",width: "40px",height: "40px"%>
-            <% end %>
-            <p class="pb-3 mb-0 small lh-sm w-100">
-              <strong class="d-block text-gray-dark"><%= community.name %></strong>
-              <br>
-            </p>
-          </div>
-          <div style="padding-top: 19px">
-            <% if current_user.is_community_favorite?(current_user,community) %>
-              <%= link_to page_favorite_community_delete_path(community.id,current_user.id), method: :delete do %>
-                <i class="fas fa-star"></i>
-              <% end %>
-            <% else %>
-              <%= link_to  page_favorite_community_create_path(community.id), method: :post do %>
-                <i class="far fa-star"></i>
-              <% end %>
-            <% end %>
-          </div>
-        </div>
-      <% end %>
+<div class="p-1 bg-white rounded shadow-sm" style="padding-left: 10px;padding-right: 10px">
+  <%= link_to page_path(community.user_id) do %>
+    <div class="d-flex justify-content-between">
+      <div class="d-flex text-muted pt-3">
+        <% if community.icon.nil? %>
+          <%= image_tag "default_icon", class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded",width: "40px",height: "40px" %>
+        <% else %>
+          <%= image_tag "/communities_image/#{community.icon}" , class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded",width: "40px",height: "40px"%>
+        <% end %>
+        <p class="pb-3 mb-0 small lh-sm w-100">
+          <strong class="d-block text-gray-dark"><%= community.name %></strong>
+          <br>
+        </p>
+      </div>
+      <div style="padding-top: 19px">
+        <% if is_community_favorite?(favorite_model,fixed_current_user,community) %>
+          <%= link_to page_favorite_community_delete_path(community.id,fixed_current_user.id), method: :delete do %>
+            <i class="fas fa-star"></i>
+          <% end %>
+        <% else %>
+          <%= link_to  page_favorite_community_create_path(community.id), method: :post do %>
+            <i class="far fa-star"></i>
+          <% end %>
+        <% end %>
+      </div>
     </div>
+  <% end %>
+</div>
