--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,250 +1,64 @@
 <%= javascript_pack_tag 'pages/index' %>
 <%= stylesheet_link_tag 'pages', media: 'all', 'data-turbolinks-track': 'reload' %>
 
-<main>
-  <div class="profile">　　                                                  <!--my profile&name表示-->
-    <% if current_user.image.nil? %>
-      <%= image_tag "/user_images/default_icon.png" , class: "user_icon" %>
-    <% else %>
-      <%= image_tag "/user_images/#{current_user.image}",class: "user_icon"%>
-    <% end %>　
-    <%= current_user.name %>
-    <%= current_user.nickname %>
-    (@<%= current_user.userid %>)
-  </div>
-
+<main class="mx-3">
   <div class="row">
-    <div class="col-md-6" style="background: white; height: 650px;">            <!--左画面の作成-->
-    <br>
-      <div class="page-header" style="text-align: center">                      <!--帯作成-->
+    <div class="col-lg mb-5" style="background: white; min-height: 100px;">
+      <div class="page-header" style="text-align: center">
         <h1>友だち</h1>
       </div>
 
-      <hr class="style" style="border-top:  1px solid #000000">
-
-      <%= form_with url: page_user_path, class: "container-fluid col px-0" ,local: false,remote: true do |f| %>
+      <%= form_with url: page_user_path, class: "container-fluid col px-0", local: false, remote: true do |f| %>
         <p class="me-3">ユーザー検索</p>
         <div class="input-group">
-          <%= f.text_field :name, class: "form-control mb-3",placeholder: "UserName",aria: {label:"Username",describedby: "basic-addon1"} %>
+          <%= f.text_field :name, class: "form-control mb-3", placeholder: "UserName", aria: { label: "Username", describedby: "basic-addon1" } %>
         </div>
       <% end %>
 
       <div id="favorite_user"></div>
 
-      <button
-        type="button"
-        class="btn btn-secondary btn-lg w-100 mt-2 mb-3"
-        style="background-color: #00bfff"
-        data-bs-toggle="collapse"
-        data-bs-target="#collapseExample1"
-        aria-expanded="false"
-        aria-controls="collapseExample1">
+      <button type="button" class="btn btn-secondary btn-lg w-100 mt-2 mb-3" style="background-color: #00bfff" data-bs-toggle="collapse" data-bs-target="#collapseExample1" aria-expanded="false" aria-controls="collapseExample1">
         お気に入り
       </button>
-      <!-- /トリガーとなるリンク&ボタン -->
+      <div class="collapse show mb-1" id="collapseExample1">
+        <%= render partial:'pages/user', collection: @favorite_users , as: :user,locals: {fixed_current_user:@user,favorite_model:@favorite}%>
+      </div>
 
-      <!-- 対象のコンテンツ -->
-
-      <% @mates.each do |user| %>
-        <% unless current_user.is_user_favorite?(current_user,user) == false %>
-          <div class="collapse show mb-1" id="collapseExample1">
-          <div class="p-1 bg-white rounded shadow-sm" style="padding-left: 10px;padding-right: 10px">
-            <%= link_to profile_path(user.userid) do %>
-              <div class="d-flex justify-content-between">
-                <div class="d-flex text-muted pt-3">
-                  <% if user.image.nil? %>
-                    <%= image_tag "default_icon", class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded",width: "40px",height: "40px" %>
-                  <% else %>
-                    <%= image_tag "/user_images/#{user.image}" , class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded",width: "40px",height: "40px"%>
-                  <% end %>
-                  <p class="pb-3 mb-0 small lh-sm w-100">
-                    <strong class="d-block text-gray-dark"><%= user.name %> (<%= user.nickname %>)</strong>
-                    @<%= user.userid %>
-                  </p>
-                </div>
-                <div style="padding-top: 19px">
-                  <% if current_user.is_user_favorite?(current_user,user) %>
-                    <%= link_to page_favorite_user_delete_path(user.id,current_user.id), method: :delete do %>
-                      <i class="fas fa-star"></i>
-                    <% end %>
-                  <% else %>
-                    <%= link_to  page_favorite_user_create_path(user.id), method: :post do %>
-                      <i class="far fa-star"></i>
-                    <% end %>
-                  <% end %>
-                </div>
-            <% end %>
-          </div>
-          </div>
-          </div>
-        <% end %>
-      <% end %>
-
-      <button
-        type="button"
-        class="btn btn-secondary btn-lg w-100 mt-2 mb-3"
-        style="background-color: #00bfff"
-        data-bs-toggle="collapse"
-        data-bs-target="#collapseExample2"
-        aria-expanded="false"
-        aria-controls="collapseExample2"
-      >
+      <button type="button" class="btn btn-secondary btn-lg w-100 mt-2 mb-3" style="background-color: #00bfff" data-bs-toggle="collapse" data-bs-target="#collapseExample2" aria-expanded="false" aria-controls="collapseExample2">
         友達
       </button>
-      <!-- /トリガーとなるリンク&ボタン -->
-
-      <!-- 対象のコンテンツ -->
-
-      <% @mates.first(20).each do |user| %>
-          <div class="collapse show mb-1" id="collapseExample2">
-            <div class="p-1 bg-white rounded shadow-sm" style="padding-left: 10px;padding-right: 10px">
-                <%= link_to profile_path(user.userid) do %>
-                  <div class="d-flex justify-content-between">
-                    <div class="d-flex text-muted pt-3">
-                      <% if user.image.nil? %>
-                        <%= image_tag "default_icon", class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded",width: "40px",height: "40px" %>
-                      <% else %>
-                        <%= image_tag "/user_images/#{user.image}" , class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded",width: "40px",height: "40px"%>
-                      <% end %>
-                      <p class="pb-3 mb-0 small lh-sm w-100">
-                        <strong class="d-block text-gray-dark"><%= user.name %> (<%= user.nickname %>)</strong>
-                        @<%= user.userid %>
-                      </p>
-                    </div>
-                    <div style="padding-top: 19px">
-                      <% if current_user.is_user_favorite?(current_user,user) %>
-                        <%= link_to page_favorite_user_delete_path(user.id,current_user.id), method: :delete do %>
-                          <i class="fas fa-star"></i>
-                        <% end %>
-                      <% else %>
-                        <%= link_to  page_favorite_user_create_path(user.id), method: :post do %>
-                          <i class="far fa-star"></i>
-                        <% end %>
-                      <% end %>
-                    </div>
-                <% end %>
-              </div>
-            </div>
-          </div>
-      <% end %>
+      <div class="collapse show mb-1" id="collapseExample2">
+        <%= render partial:'pages/user', collection: @mates , as: :user ,locals: {fixed_current_user:@user,favorite_model:@favorite}%>
+      </div>
     </div>
-      <!--左画面の作成ここまで-->
 
-    <div class="col-md-6" style="background: white; height: 650px;">　
-     <br>
+    <div class="hidden-lg d-lg-none d-xl-none d-xxl-none">
+      <hr class="my-4">
+    </div>
 
-      <div class="page-header" style="text-align: center">                      <!--帯作成-->
+    <div class="col-lg mb-5" style="background: white; min-height: 100px;">
+      <div class="page-header" style="text-align: center">
         <h1>コミュニティ</h1>
       </div>
 
-      <hr class="style" style="border-top: 1px solid #000000">
-
-      <%= form_with url: page_community_path, class: "container-fluid col px-0" ,local: false,remote: true do |f| %>
+      <%= form_with url: page_community_path, class: "container-fluid col px-0", local: false, remote: true do |f| %>
         <p class="me-3">コミュニティ検索</p>
         <div class="input-group">
-          <%= f.text_field :name, class: "form-control mb-3",placeholder: "CommunityName",aria: {label:"CommunityName",describedby: "basic-addon1"} %>
+          <%= f.text_field :name, class: "form-control mb-3", placeholder: "CommunityName", aria: { label: "CommunityName", describedby: "basic-addon1" } %>
         </div>
       <% end %>
 
       <div id="favorite_community"></div>
 
-      <button
-        type="button"
-        class="btn btn-secondary btn-lg w-100 mt-2 mb-3"
-        style="background-color: #00bfff"
-        data-bs-toggle="collapse"
-        data-bs-target="#collapseExample3"
-        aria-expanded="false"
-        aria-controls="collapseExample3"
-      >
-        お気に入り
-      </button>
-      <!-- /トリガーとなるリンク&ボタン -->
-
-      <!-- 対象のコンテンツ -->
+      <button type="button" class="btn btn-secondary btn-lg w-100 mt-2 mb-3" style="background-color: #00bfff" data-bs-toggle="collapse" data-bs-target="#collapseExample3" aria-expanded="false" aria-controls="collapseExample3">お気に入り</button>
       <div class="collapse show mb-1" id="collapseExample3">
-      <% @community.each do |community| %>
-        <% unless current_user.is_community_favorite?(current_user,community) == false %>
-              <div class="collapse show mb-1" id="collapseExample3">
-                <div class="p-1 bg-white rounded shadow-sm" style="padding-left: 10px;padding-right: 10px">
-                  <%= link_to profile_path(community.user_id) do %>
-                    <div class="d-flex justify-content-between">
-                      <div class="d-flex text-muted pt-3">
-                        <% if community.icon.nil? %>
-                          <%= image_tag "default_icon" ,id:"preview",class: "d-block mx-auto mb-4 border border-success rounded icon",width: "40px",height: "40px" %>
-                        <% else %>
-                          <%= image_tag "/community_icon/#{community.icon}.png" , class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded",width: "40px",height: "40px"%>
-                        <% end %>
-                        <p class="pb-3 mb-0 small lh-sm w-100">
-                          <strong class="d-block text-gray-dark"><%= community.name %></strong>
-                          <br>
-                        </p>
-                      </div>
-                      <div style="padding-top: 19px">
-                        <% if current_user.is_community_favorite?(current_user,community) %>
-                          <%= link_to page_favorite_community_delete_path(community.id,current_user.id), method: :delete do %>
-                            <i class="fas fa-star"></i>
-                          <% end %>
-                        <% else %>
-                          <%= link_to page_favorite_community_create_path(community.id), method: :post do %>
-                            <i class="far fa-star"></i>
-                          <% end %>
-                        <% end %>
-                      </div>
-                    </div>
-                  <% end %>
-                </div>
-              </div>
-            <% end %>
-        <% end %>
+        <%= render partial:'pages/community', collection: @favorite_communities , as: :community ,locals: {fixed_current_user:@user,favorite_model:@favorite}%>
       </div>
 
-      <button
-        type="button"
-        class="btn btn-secondary btn-lg w-100 mt-2 mb-3"
-        style="background-color: #00bfff"
-        data-bs-toggle="collapse"
-        data-bs-target="#collapseExample4"
-        aria-expanded="false"
-        aria-controls="collapseExample4"
-      >
-        コミュニティ
-      </button>
-      <!-- /トリガーとなるリンク&ボタン -->
-      <% @community.first(20).each do |community| %>
-        <div class="collapse show mb-1" id="collapseExample4">
-          <div class="p-1 bg-white rounded shadow-sm" style="padding-left: 10px;padding-right: 10px">
-            <%= link_to page_path(community.user_id) do %>
-              <div class="d-flex justify-content-between">
-                <div class="d-flex text-muted pt-3">
-                  <% if community.icon.nil? %>
-                    <%= image_tag "/community_icon/default_icon.png", class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded",width: "40px",height: "40px" %>
-                  <% else %>
-                    <%= image_tag "/community_icon/#{community.icon}.png" , class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded",width: "40px",height: "40px"%>
-                  <% end %>
-                  <p class="pb-3 mb-0 small lh-sm w-100">
-                    <strong class="d-block text-gray-dark"><%= community.name %></strong>
-                    <br>
-                  </p>
-                </div>
-                <div style="padding-top: 19px">
-                  <% if current_user.is_community_favorite?(current_user,community) %>
-                    <%= link_to page_favorite_community_delete_path(community.id,current_user.id), method: :delete do %>
-                      <i class="fas fa-star"></i>
-                    <% end %>
-                  <% else %>
-                    <%= link_to  page_favorite_community_create_path(community.id), method: :post do %>
-                      <i class="far fa-star"></i>
-                    <% end %>
-                  <% end %>
-                </div>
-              </div>
-            <% end %>
-          </div>
-        </div>
-      <% end %>
-      <!-- 対象のコンテンツ -->
-
-    </div>     <!--右画面制作-->
+      <button type="button" class="btn btn-secondary btn-lg w-100 mt-2 mb-3" style="background-color: #00bfff" data-bs-toggle="collapse" data-bs-target="#collapseExample4" aria-expanded="false" aria-controls="collapseExample4">コミュニティ</button>
+      <div class="collapse show mb-1" id="collapseExample4">
+        <%= render partial:'pages/community', collection: @communities , as: :community ,locals: {fixed_current_user:@user,favorite_model:@favorite}%>
+      </div>
+    </div>
   </div>
 </main>
