--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -83,8 +83,7 @@
       </div>
     </div>
   </div>
-
-
+  <% if @badge %>
   <!-- /.col-md-12 -->
   <div class="row d-flex justify-content-around center-block">
     <div class="col-md-3 col-sm-12 w-100">
@@ -212,6 +211,8 @@
         </div>
       </div>
     </div>
+  <% end %>
+
     <div class="col-md-3 col-sm-12 w-100">
       <div class="panel panel-default">
         <div class="panel-heading m-3">
