--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,6 +1,11 @@
 <%= javascript_pack_tag 'pages/index' %>
 <%= stylesheet_link_tag 'pages', media: 'all', 'data-turbolinks-track': 'reload' %>
 
+<div class="text-center">
+  <p class="notice"><%= notice %></p>
+  <h3 class="notice"><%= alert %></h3>
+</div>
+
 <main class="mx-3">
   <div class="row">
     <div class="col-lg mb-5" style="background: white; min-height: 100px;">
