--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,3 +1,15 @@
 @import '~@fortawesome/fontawesome-free/scss/fontawesome';
 @import "bootstrap";
 @import "~tag-it/css/jquery.tagit";
+
+#img1Big{
+  display:none;
+}
+
+#back {
+  display: none;
+  background: rgba(0, 0, 0, 0.5);
+  position: absolute;
+  left: 0px;
+  top: 0px;
+}
