--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -49,6 +49,13 @@
             </li>
           </ul>
           <% if current_user.id != @user.id %>
+            <div class="actions ">
+              <%= link_to 'チャット',
+                          chat_path(@user.userid),
+                          style: "color:#FFF;",
+                          class:"btn btn-primary followbtn"
+              %>
+            </div>
             <% unless current_user.following?(@user) %>
               <div class="actions ">
                 <%= link_to 'フォロー',
