--- a/app/views/profiles/follow.html.erb
+++ b/app/views/profiles/follow.html.erb
@@ -2,13 +2,13 @@
 <main class="container">
   <div class="my-3 p-3 bg-white rounded shadow-sm">
     <h6 class="border-bottom pb-2 mb-0">フォローリスト (<%= @following.count %>)</h6>
-    <% @following.first(5).each do |user| %>
+    <% @following.each do |user| %>
       <%= link_to profile_path(user.userid) do %>
         <div class="d-flex text-muted pt-3">
           <% if user.image.nil? %>
-            <%= image_tag "/user_images/default_icon.png", class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded",width: "40px",height: "40px" %>
+            <%= image_tag "default_icon.png", class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded",width: "40px",height: "40px" %>
           <% else %>
-            <%= image_tag "/user_images/#{user.image}.png" , class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded",width: "40px",height: "40px"%>
+            <%= image_tag "/user_images/#{user.image}" , class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded",width: "40px",height: "40px"%>
           <% end %>
           <p class="pb-3 mb-0 small lh-sm  border-bottom w-100">
             <strong class="d-block text-gray-dark"><%= user.name %> (<%= user.nickname %>)</strong>
