--- a/app/views/profiles/_list.html.erb
+++ b/app/views/profiles/_list.html.erb
@@ -1,12 +1,14 @@
-<div class="my-3 p-3 bg-white rounded shadow-sm">
-  <h6 class="border-bottom pb-2 mb-0"><%= name %>リスト (<%= list.size %>)</h6>
-  <% if list.size == 0 %>
-    <p class="text-gray-dark">現在はいないようです！</p>
-  <% end %>
-  <%= render partial:"profiles/user", collection: list,as: :user %>
-  <% unless list.size == 0 && list.size > 5 %>
-    <small class="d-block text-end mt-3">
-      <%= link_to "すべて表示", path %>
-    </small>
-  <% end %>
+<div class="col-md-6">
+  <div class="my-3 p-3 bg-white rounded shadow-sm">
+    <h6 class="border-bottom pb-2 mb-0"><%= name %> (<%= count %>)</h6>
+    <% if list.size == 0 %>
+      <p class="text-gray-dark">現在はいないようです！</p>
+    <% end %>
+    <%= render partial: "profiles/user", collection: list, as: :user %>
+    <% unless list.size == 0 && list.size > 5 %>
+      <small class="d-block text-end mt-3">
+        <%= link_to "すべて表示", path %>
+      </small>
+    <% end %>
+  </div>
 </div>
