--- a/app/views/profiles/follow.html.erb
+++ b/app/views/profiles/follow.html.erb
@@ -1,21 +1,11 @@
 <%= stylesheet_link_tag 'profiles', media: 'all', 'data-turbolinks-track': 'reload' %>
 <main class="container">
   <div class="my-3 p-3 bg-white rounded shadow-sm">
-    <h6 class="border-bottom pb-2 mb-0">フォローリスト (<%= @following.count %>)</h6>
-    <% @following.each do |user| %>
-      <%= link_to profile_path(user.userid) do %>
-        <div class="d-flex text-muted pt-3">
-          <% if user.image.nil? %>
-            <%= image_tag "default_icon.png", class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded",width: "40px",height: "40px" %>
-          <% else %>
-            <%= image_tag "/user_images/#{user.image}" , class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded",width: "40px",height: "40px"%>
-          <% end %>
-          <p class="pb-3 mb-0 small lh-sm  border-bottom w-100">
-            <strong class="d-block text-gray-dark"><%= user.name %> (<%= user.nickname %>)</strong>
-            @<%= user.userid %>
-          </p>
-        </div>
-      <% end %>
+    <h6 class="border-bottom pb-2 mb-0">フォロー (<%= @following.size %>)</h6>
+    <% if @following.size == 0 %>
+      <p class="text-gray-dark">現在はいないようです！</p>
     <% end %>
+    　<%= render partial: "profiles/user", collection: @pagenate, as: :user %>
   </div>
+  <%= render 'layouts/pagenate', pagenate: @pagenate %>
 </main>
